Fix Registration Link Color
They were white, invisible

--- a/client/main.css
+++ b/client/main.css
@@ -39,7 +39,7 @@
 	color: white;
 }
 
-a.login-close-text {
+#login-dropdown-list a {
 	color: black !important;
 }
 
